--- a/docker/compose.dev.yml
+++ b/docker/compose.dev.yml
@@ -9,13 +9,58 @@ services:
       - "3000:3000"
     volumes:
       - ../src:/app/src
-    env_file:
-      - ../.env
+      - ../.env:/app/.env
     environment:
       - NODE_ENV=development
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://delineate-jaeger:4318
+      - S3_ENDPOINT=http://delineate-minio:9000
+      - S3_ACCESS_KEY_ID=minioadmin
+      - S3_SECRET_ACCESS_KEY=minioadmin
+      - S3_BUCKET_NAME=downloads
+      - S3_FORCE_PATH_STYLE=true
     depends_on:
-      - delineate-jaeger
+      delineate-jaeger:
+        condition: service_started
+      delineate-minio:
+        condition: service_healthy
+      delineate-minio-init:
+        condition: service_completed_successfully
+    networks:
+      - delineate-network
+
+  delineate-minio:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio-data:/data
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - delineate-network
+
+  delineate-minio-init:
+    image: minio/mc:latest
+    depends_on:
+      delineate-minio:
+        condition: service_healthy
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set myminio http://delineate-minio:9000 minioadmin minioadmin;
+      mc mb myminio/downloads --ignore-existing;
+      mc anonymous set download myminio/downloads;
+      exit 0;
+      "
+    networks:
+      - delineate-network
 
   delineate-jaeger:
     image: jaegertracing/all-in-one:latest
@@ -24,3 +69,12 @@ services:
       - "4318:4318"
     environment:
       - COLLECTOR_OTLP_ENABLED=true
+    networks:
+      - delineate-network
+
+networks:
+  delineate-network:
+    driver: bridge
+
+volumes:
+  minio-data:
