--- a/docker/compose.prod.yml
+++ b/docker/compose.prod.yml
@@ -11,4 +11,58 @@ services:
       - ../.env
     environment:
       - NODE_ENV=production
+      - S3_ENDPOINT=http://delineate-minio:9000
+      - S3_ACCESS_KEY_ID=minioadmin
+      - S3_SECRET_ACCESS_KEY=minioadmin
+      - S3_BUCKET_NAME=downloads
+      - S3_FORCE_PATH_STYLE=true
+    depends_on:
+      delineate-minio:
+        condition: service_healthy
+      delineate-minio-init:
+        condition: service_completed_successfully
+    networks:
+      - delineate-network
     restart: unless-stopped
+
+  delineate-minio:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=minioadmin
+      - MINIO_ROOT_PASSWORD=minioadmin
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio-data:/data
+    healthcheck:
+      test: ["CMD", "mc", "ready", "local"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - delineate-network
+    restart: unless-stopped
+
+  delineate-minio-init:
+    image: minio/mc:latest
+    depends_on:
+      delineate-minio:
+        condition: service_healthy
+    entrypoint: >
+      /bin/sh -c "
+      mc alias set myminio http://delineate-minio:9000 minioadmin minioadmin;
+      mc mb myminio/downloads --ignore-existing;
+      mc anonymous set download myminio/downloads;
+      exit 0;
+      "
+    networks:
+      - delineate-network
+
+networks:
+  delineate-network:
+    driver: bridge
+
+volumes:
+  minio-data:
