--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,101 +6,78 @@ on:
   pull_request:
     branches: [main, master]
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 jobs:
+  # Stage 1: Lint & Format
   lint:
-    name: Lint & Format
-    runs-on: ubuntu-24.04
-    timeout-minutes: 10
-    container:
-      image: node:24-slim
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js cache
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "24"
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci --prefer-offline
+        run: npm ci
 
       - name: Run ESLint
         run: npm run lint
 
-      - name: Check code formatting
+      - name: Check Prettier formatting
         run: npm run format:check
 
+  # Stage 2: E2E Tests (depends on lint)
   test:
-    name: E2E Tests
-    runs-on: ubuntu-24.04
-    timeout-minutes: 30
+    runs-on: ubuntu-latest
     needs: lint
     services:
       minio:
         image: minio/minio:latest
-        options: >
-          --health-cmd "curl -f http://localhost:9000/minio/health/live"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
         ports:
           - 9000:9000
           - 9001:9001
         env:
           MINIO_ROOT_USER: minioadmin
           MINIO_ROOT_PASSWORD: minioadmin
-    container:
-      image: node:24-slim
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        options: >-
+          --health-cmd "curl -f http://localhost:9000/minio/health/live"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        volumes:
+          - minio_data:/data
 
-      - name: Setup Node.js cache
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "24"
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci --prefer-offline
+        run: npm ci
 
-      - name: Initialize MinIO bucket
+      - name: Wait for MinIO
         run: |
-          npm install -g minio-client
-          mc config host add minio http://minio:9000 minioadmin minioadmin
-          mc mb minio/downloads --ignore-existing
-          mc version enable minio/downloads
-        continue-on-error: true
+          timeout 60 bash -c 'until curl -f http://localhost:9000/minio/health/live; do sleep 2; done'
+
+      - name: Create MinIO bucket
+        run: |
+          npx minio-cli alias set myminio http://localhost:9000 minioadmin minioadmin
+          npx minio-cli mb myminio/downloads --ignore-existing
 
       - name: Run E2E tests
-        run: npm run test:e2e
         env:
-          NODE_ENV: development
-          PORT: 3000
-          S3_REGION: us-east-1
-          S3_ENDPOINT: http://minio:9000
+          S3_ENDPOINT: http://localhost:9000
           S3_ACCESS_KEY_ID: minioadmin
           S3_SECRET_ACCESS_KEY: minioadmin
           S3_BUCKET_NAME: downloads
           S3_FORCE_PATH_STYLE: "true"
-          SENTRY_DSN: ""
-          OTEL_EXPORTER_OTLP_ENDPOINT: ""
-          REQUEST_TIMEOUT_MS: "30000"
-          RATE_LIMIT_WINDOW_MS: "60000"
-          RATE_LIMIT_MAX_REQUESTS: "100"
-          CORS_ORIGINS: "*"
-          DOWNLOAD_DELAY_MIN_MS: "1000"
-          DOWNLOAD_DELAY_MAX_MS: "3000"
+        run: npm run test:e2e
 
       - name: Upload test results
         if: always()
@@ -110,86 +87,73 @@ jobs:
           path: test-results/
           retention-days: 30
 
+  # Stage 3: Build & Push Docker (depends on test)
   build:
-    name: Build & Push Docker Image
-    runs-on: ubuntu-24.04
-    timeout-minutes: 20
+    runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
       packages: write
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Container Registry
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image (Prod)
-        uses: docker/build-push-action@v6
+      - name: Build and push production image
+        uses: docker/build-push-action@v5
         with:
           context: .
-          file: docker/Dockerfile.prod
-          push: ${{ github.event_name == 'push' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          file: ./docker/Dockerfile.prod
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}:latest
+            ghcr.io/${{ github.repository }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+  # Stage 4: Security Scanning (parallel)
   security:
-    name: Security Scanning
-    runs-on: ubuntu-24.04
-    timeout-minutes: 15
-    needs: lint
-    if: always()
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    runs-on: ubuntu-latest
+    needs: test
 
-      - name: Run Trivy vulnerability scanner
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Trivy vulnerability scan
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: fs
-          scan-ref: .
-          format: sarif
-          output: trivy-results.sarif
+          scan-type: "fs"
+          scan-ref: "."
+          format: "sarif"
+          output: "trivy-results.sarif"
 
-      - name: Upload Trivy results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
+      - name: Upload Trivy results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
         with:
-          sarif_file: trivy-results.sarif
+          sarif_file: "trivy-results.sarif"
 
+  # Stage 5: Status Check (final)
   status:
-    name: CI Status Check
-    runs-on: ubuntu-24.04
-    timeout-minutes: 5
-    needs: [lint, test, build]
+    runs-on: ubuntu-latest
+    needs: [lint, test, build, security]
     if: always()
+
     steps:
-      - name: Check job status
+      - name: Check pipeline status
         run: |
-          if [ "${{ needs.lint.result }}" = "failure" ] || [ "${{ needs.test.result }}" = "failure" ]; then
-            echo "❌ CI Pipeline failed!"
+          if [ "${{ needs.lint.result }}" != "success" ] || [ "${{ needs.test.result }}" != "success" ]; then
+            echo "❌ Pipeline failed"
             exit 1
           fi
-          echo "✅ CI Pipeline passed!"
+          echo "✅ All checks passed!"
