--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,22 +32,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: lint
-    services:
-      minio:
-        image: minio/minio:latest
-        env:
-          MINIO_ROOT_USER: minioadmin
-          MINIO_ROOT_PASSWORD: minioadmin
-        ports:
-          - 9000:9000
-          - 9001:9001
-        options: >-
-          --entrypoint sh
-          --health-cmd "curl -f http://localhost:9000/minio/health/live ||
-          exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - uses: actions/checkout@v4
@@ -61,19 +45,29 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Start MinIO server
+      - name: Start MinIO with Docker
         run: |
-          docker exec ${{ job.services.minio.id }} minio server /data &
-          sleep 5
+          docker run -d \
+            --name minio \
+            --network host \
+            -e MINIO_ROOT_USER=minioadmin \
+            -e MINIO_ROOT_PASSWORD=minioadmin \
+            minio/minio:latest \
+            minio server /data
 
-      - name: Wait for MinIO health
+      - name: Wait for MinIO to be ready
         run: |
-          timeout 60 bash -c 'until curl -f http://localhost:9000/minio/health/live; do echo "Waiting for MinIO..."; sleep 2; done'
+          timeout 60 bash -c 'until nc -z localhost 9000; do echo "Waiting for MinIO..."; sleep 1; done'
+          sleep 3
 
       - name: Create MinIO bucket
         run: |
-          docker exec ${{ job.services.minio.id }} \
-            bash -c 'export MINIO_ROOT_USER=minioadmin && export MINIO_ROOT_PASSWORD=minioadmin && /usr/bin/mc alias set myminio http://localhost:9000 minioadmin minioadmin && /usr/bin/mc mb myminio/downloads --ignore-existing'
+          docker run --rm \
+            --network host \
+            minio/mc:latest \
+            /bin/sh -c \
+            'mc alias set myminio http://localhost:9000 minioadmin minioadmin && \
+             mc mb myminio/downloads --ignore-existing'
 
       - name: Run E2E tests
         env:
@@ -91,6 +85,10 @@ jobs:
           name: test-results
           path: test-results/
           retention-days: 30
+
+      - name: Stop MinIO
+        if: always()
+        run: docker stop minio || true
 
   # Stage 3: Build & Push Docker (depends on test)
   build:
