--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI
 
 on:
   push:
@@ -6,22 +6,15 @@ on:
   pull_request:
     branches: [main, master]
 
-permissions:
-  contents: read
-  security-events: write
-
 jobs:
-  # Stage 1: Lint & Format
   lint:
-    runs-on: ubuntu-latest
+    name: Lint
+    runs-on: ubuntu-24.04
+    container:
+      image: node:24-slim
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "24"
-          cache: "npm"
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: npm ci
@@ -29,148 +22,54 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
-      - name: Check Prettier formatting
+      - name: Check formatting
         run: npm run format:check
 
-  # Stage 2: E2E Tests (depends on lint)
   test:
-    runs-on: ubuntu-latest
+    name: E2E Tests
+    runs-on: ubuntu-24.04
     needs: lint
-
+    container:
+      image: node:24-slim
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "24"
-          cache: "npm"
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Start MinIO with Docker
-        run: |
-          docker run -d \
-            --name minio \
-            --network host \
-            -e MINIO_ROOT_USER=minioadmin \
-            -e MINIO_ROOT_PASSWORD=minioadmin \
-            minio/minio:latest \
-            minio server /data
-
-      - name: Wait for MinIO to be ready
-        run: |
-          timeout 60 bash -c 'until nc -z localhost 9000; do echo "Waiting for MinIO..."; sleep 1; done'
-          sleep 3
-
-      - name: Create MinIO bucket
-        run: |
-          docker run --rm \
-            --network host \
-            minio/mc:latest \
-            mc alias set myminio http://localhost:9000 minioadmin minioadmin
-          docker run --rm \
-            --network host \
-            minio/mc:latest \
-            mc mb myminio/downloads --ignore-existing
-
       - name: Run E2E tests
-        env:
-          S3_ENDPOINT: http://localhost:9000
-          S3_ACCESS_KEY_ID: minioadmin
-          S3_SECRET_ACCESS_KEY: minioadmin
-          S3_BUCKET_NAME: downloads
-          S3_FORCE_PATH_STYLE: "true"
         run: npm run test:e2e
+        env:
+          NODE_ENV: development
+          PORT: 3000
+          S3_REGION: us-east-1
+          S3_BUCKET_NAME: ""
+          S3_FORCE_PATH_STYLE: "true"
+          SENTRY_DSN: ""
+          OTEL_EXPORTER_OTLP_ENDPOINT: ""
+          REQUEST_TIMEOUT_MS: "30000"
+          RATE_LIMIT_WINDOW_MS: "60000"
+          RATE_LIMIT_MAX_REQUESTS: "100"
+          CORS_ORIGINS: "*"
 
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: test-results/
-          retention-days: 30
-
-      - name: Stop MinIO
-        if: always()
-        run: docker stop minio || true
-
-  # Stage 3: Build & Push Docker (depends on test)
   build:
-    runs-on: ubuntu-latest
+    name: Build Docker Image
+    runs-on: ubuntu-24.04
     needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Convert repo to lowercase
-        run: |
-          echo "REPO_LOWER=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-
-      - name: Build and push production image
-        uses: docker/build-push-action@v5
+      - name: Build Docker image
+        uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./docker/Dockerfile.prod
-          push: true
-          tags: |
-            ghcr.io/${{ env.REPO_LOWER }}:latest
-            ghcr.io/${{ env.REPO_LOWER }}:${{ github.sha }}
+          file: docker/Dockerfile.prod
+          push: false
+          tags: delineate-hackathon-challenge:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-  # Stage 4: Security Scanning (parallel)
-  security:
-    runs-on: ubuntu-latest
-    needs: test
-    permissions:
-      contents: read
-      security-events: write
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Run Trivy vulnerability scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: fs
-          scan-ref: .
-          format: sarif
-          output: trivy-results.sarif
-
-      - name: Upload Trivy results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: trivy-results.sarif
-          category: trivy
-
-  # Stage 5: Status Check (final)
-  status:
-    runs-on: ubuntu-latest
-    needs: [lint, test, build, security]
-    if: always()
-
-    steps:
-      - name: Check pipeline status
-        run: |
-          if [ "${{ needs.lint.result }}" != "success" ] || [ "${{ needs.test.result }}" != "success" ]; then
-            echo "❌ Pipeline failed"
-            exit 1
-          fi
-          echo "✅ All checks passed!"
